// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloComponent should match snapshot 1`] = `
<div>
  <span>
    Hello 
    World
    !
  </span>
  <input
    autoComplete="off"
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="World"
  />
</div>
`;

exports[`HelloComponent should match snapshot 2`] = `
<div>
  <span>
    Hello 
    John
    !
  </span>
  <input
    autoComplete="off"
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="John"
  />
</div>
`;
